--- a/espacio.css
+++ b/espacio.css
@@ -1,26 +1,40 @@
  .container {
         max-width: 650px;
-        height: 700px;
+        height: 900px;
         margin: 10px auto;
         padding: 1.7em;
         background-color: lightblue;
         opacity: 90%;
-        font-family: "Comic Sans MS", cursive, sans-serif; 
+        font-family: Arial, Helvetica, sans-serif; 
         border-radius: 10px;
-}
-      #name, #email, #number, #dropdown {
-        margin: 5px 20px 30px 20px;
-}
-    input, #dropdown, #submit, textarea {
-        border-radius: 15px;
-    }
+     }
+     
+     #name, #email, #number, #dropdown { 
+        margin: 5px 20px 20px 20px;
+     }
+     
+     #name-label, #email-label, #number-label, #dropdown-label {
+        font-weight: bold;
+        position: relative;
+        left: 20px;
+        font-size: 1.1em;
+     }
+     
+     input, #dropdown, textarea {
+        border-radius: 12px;
+        height: 22px;
+        position: relative;
+        right: 5px;
+     }
     h1 {
+        font-family: Arial, Helvetica, sans-serif;
         text-align: center;
         font-size: 80px;
         color: red;
         flex-direction: column;
     }
     p {
+        font-family: Arial, Helvetica, sans-serif;
         text-align: center;
         display: flex;
         font-size: 25px;
@@ -39,5 +53,34 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: 100% 100%;
+        height: 1200px;
     }
-    
+    li label {
+        position: relative;
+        bottom: 5px;
+        font-size: 1.1em;
+    }
+    ul {
+        position: relative;
+        right: 20px;
+    }
+    strong {
+        font-size: 1.1em;
+    }
+    textarea {
+        width: 100%;
+        min-height: 100px;
+    }
+    button {
+        display: block;
+        width: 50%;
+        height: 60px;
+        box-sizing: content-box;
+        margin-top: 1.5em;
+        text-align: center;
+        font-size: 2.2em;
+        font-weight: bold;
+        border-radius: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
