--- a/espacio.css
+++ b/espacio.css
@@ -70,6 +70,9 @@
     textarea {
         width: 100%;
         min-height: 100px;
+        max-width: 100%;
+        max-height: 200px;
+        font-size: 1.2em;
     }
     button {
         display: block;
