--- a/espacio.css
+++ b/espacio.css
@@ -1,12 +1,12 @@
  .container {
-        max-width: 650px;
+        max-width: 600px;
         height: 900px;
         margin: 10px auto;
-        padding: 1.7em;
+        padding: 1.5em;
         background-color: lightblue;
         opacity: 90%;
         font-family: Arial, Helvetica, sans-serif; 
-        border-radius: 10px;
+        border-radius: 8px;
      }
      
      #name, #email, #number, #dropdown { 
@@ -21,10 +21,11 @@
      }
      
      input, #dropdown, textarea {
-        border-radius: 12px;
-        height: 22px;
+        font-size: 1.1em;
+        border-radius: 10px;
+        height: 25px;
         position: relative;
-        right: 5px;
+        padding-left: 5px;
      }
     h1 {
         font-family: Arial, Helvetica, sans-serif;
@@ -52,6 +53,7 @@
         background-image: url(https://i.redd.it/yyb8dhdfzmm01.png);
         background-position: center;
         background-repeat: no-repeat;
+        background-attachment: fixed;
         background-size: 100% 100%;
         height: 1200px;
     }
@@ -68,13 +70,16 @@
         font-size: 1.1em;
     }
     textarea {
-        width: 100%;
+        width: 98%;
         min-height: 100px;
         max-width: 100%;
         max-height: 200px;
         font-size: 1.2em;
+        margin-top: 1.2em;
+        padding: 0.3em;
     }
     button {
+        min-height: 100px;
         display: block;
         width: 50%;
         height: 60px;
