--- a/espacio.css
+++ b/espacio.css
@@ -2,7 +2,7 @@
         max-width: 600px;
         height: 900px;
         margin: 10px auto;
-        padding: 1.5em;
+        padding: 1.2em 0.5em 1.2em 0.5em;
         background-color: lightblue;
         opacity: 90%;
         font-family: Arial, Helvetica, sans-serif; 
